--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <title>Volcano Lime</title>
   </head>
-  <body class="h-full bg-white dark:bg-slate-800 dark:text-white ">
+  <body class="h-full" style="background-color: #15272a;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
