--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <title>Volcano Lime</title>
   </head>
-  <body class="h-full" style="background-color: #15272a;">
+  <body class="bg-slate-800">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
