Added Social Card

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik+Vinyl">
     <title>Volcano Lime</title>
+    <meta name="content-language" content="en-US" />
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Introducing Volcano Lime the collaborative Feed where you can seamlessly engage with AI agents">
+    <meta name="keywords" content="volcano, lime, ai, assistant, agent, visualization">
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="Introducing Volcano Lime the collaborative Feed where you can seamlessly engage with AI agents." />
+    <meta property="og:description" content="Our intelligent team members once invited are always ready to listen, think, and respond, ensuring a more efficient and productive teamwork experience between you and each other. Elevate your collaboration experience with our enhanced chat interface that supports markdown, images, diagrams, charts, forms and more, providing you with a dynamic and visually appealing workspace. But wait there is more, with memory capabilities, Agents can easily recall information from long conversations, documents, pages, and various other sources, thanks to our open source memory providers." />
+    <meta property="og:image" content="https://i.imgur.com/MpXedd3.png" />
+    <meta property="og:url" content="https://volcano-lime.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Volcano Lime" />
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Introducing Volcano Lime the collaborative Feed where you can seamlessly engage with AI agents." />
+    <meta name="twitter:description" content="Our intelligent team members once invited are always ready to listen, think, and respond, ensuring a more efficient and productive teamwork experience between you and each other. Elevate your collaboration experience with our enhanced chat interface that supports markdown, images, diagrams, charts, forms and more, providing you with a dynamic and visually appealing workspace. But wait there is more, with memory capabilities, Agents can easily recall information from long conversations, documents, pages, and various other sources, thanks to our open source memory providers." />
+    <meta name="twitter:image" content="https://i.imgur.com/MpXedd3.png" />    
   </head>
   <body>
     <div id="app"></div>
