--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Introducing Volcano Lime the collaborative Feed where you can seamlessly engage with AI agents." />
     <meta name="twitter:description" content="Our intelligent team members once invited are always ready to listen, think, and respond, ensuring a more efficient and productive teamwork experience between you and each other. Elevate your collaboration experience with our enhanced chat interface that supports markdown, images, diagrams, charts, forms and more, providing you with a dynamic and visually appealing workspace. But wait there is more, with memory capabilities, Agents can easily recall information from long conversations, documents, pages, and various other sources, thanks to our open source memory providers." />
-    <meta name="twitter:image" content="https://i.imgur.com/MpXedd3.png" />    
+    <meta name="twitter:image" content="https://i.imgur.com/MpXedd3.png" />
+    <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdn.plot.ly/plotly-1.2.0.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/danfojs@0.3.4/lib/bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
+    <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
+  
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
