--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <link href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
   </head>
-  <body>
-    <div id="app"></div>  
+  <body class="bg-stone-900">
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
